--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "tubaulsecreto",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://juanvidal7.github.io/TuBaulSecreto-ReactJS",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^8.5.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -14,7 +16,9 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "set PORT= 3002 && react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "set PORT= 3003 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
