--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tubaulsecreto",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://juanvidal7.github.io/llenatubaul#/",
+  "homepage": "https://juanvidal7.github.io/TuBaulSecreto-ReactJS",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
