--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/netlify-lambda serve src",
-    "build": "react-scripts build",
+    "start": "set PORT= 3003 && react-scripts start",
+    "build": "CI= npm run build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
